--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ obj
 docs/extensions
 .ipynb_checkpoints
 pytket/extensions/quest/_metadata.py
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
