--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "debugpy.debugJustMyCode": false
+    "debugpy.debugJustMyCode": false,
+    "python.analysis.typeCheckingMode": "basic"
 }
