--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
         "ms-python.black-formatter",
         "ms-python.python",
         "ms-python.pylint",
-        "ms-python.isort"
+        "ms-python.isort",
+        "ms-python.mypy-type-checker"
     ]
 }
