Add python.testing.cwd setting to .vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,5 @@
     "python.testing.pytestEnabled": true,
     "debugpy.debugJustMyCode": false,
     "python.analysis.typeCheckingMode": "basic",
+    "python.testing.cwd": "${workspaceFolder}/tests",
 }
