--- a/mypy.ini
+++ b/mypy.ini
@@ -19,8 +19,6 @@ warn_no_return = False
 warn_return_any = True
 warn_unreachable = True
 
-disable_error_code = import-untyped
-
 [mypy-pytest.*]
 ignore_missing_imports = True
 ignore_errors = True
@@ -28,3 +26,6 @@ ignore_errors = True
 [mypy-lark.*]
 ignore_missing_imports = True
 ignore_errors = True
+
+[mypy-pyquest.*]
+ignore_missing_imports = True
