--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
       run: pip install black~=24.4 pylint~=3.2
     - name: Check files are formatted with black
       run: |
-        black --check .
+        black .
     - name: Run pylint
       run: |
         pylint */
