--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -29,6 +29,17 @@ jobs:
       with:
         fetch-depth: '0'
     - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/* +refs/heads/*:refs/remotes/origin/*
+    - name: Install dependencies
+      shell: bash
+      run: |
+        if [[ "${{ matrix.os }}" == "ubuntu-22.04" ]]; then
+          sudo apt-get update && sudo apt-get install -y libopenmpi-dev
+        elif [[ "${{ matrix.os }}" == "macos-12" ]]; then
+          brew install open-mpi
+        elif [[ "${{ matrix.os }}" == "windows-2022" ]]; then
+          curl -L -o msmpisetup.exe https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe
+          ./msmpisetup.exe -unattend
+        fi
     - name: Set up Python 3.10
       if: github.event_name == 'push' || github.event_name == 'schedule'
       uses: actions/setup-python@v5
