--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ obj
 .github/workflows/docs/extensions
 .ipynb_checkpoints
 pytket/extensions/quest/_metadata.py
+.envrc
+.env
+.direnv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
