--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: "0"
+          submodules: true
       - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/* +refs/heads/*:refs/remotes/origin/*
       - name: Install dependencies
         shell: bash
@@ -122,6 +123,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: "0"
+          submosules: true
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
