--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -77,7 +77,7 @@ jobs:
         run: |
           cd docs
           bash ./install.sh
-          for w in `find wheelhouse/ -type f -name "*.whl"` ; do poetry install $w ; done
+          for w in `find wheelhouse/ -type f -name "*.whl"` ; do poetry run pip install $w ; done
       - name: Build docs
         if: (matrix.os == 'ubuntu-22.04') && (github.event_name == 'pull_request' || github.event_name == 'schedule' )
         timeout-minutes: 20
@@ -137,7 +137,7 @@ jobs:
       - name: Install poetry
         run: pip install poetry
       - name: Install extension
-        run: for w in `find wheelhouse/ -type f -name "*.whl"` ; do poetry install $w ; done
+        run: for w in `find wheelhouse/ -type f -name "*.whl"` ; do poetry run pip install $w ; done
       - name: Install docs dependencies
         run: |
           cd docs
