--- a/ruff.toml
+++ b/ruff.toml
@@ -4,7 +4,7 @@ line-length = 88
 
 extend-exclude = ["examples"]
 
-select = [
+lint.select = [
   "E", # pycodestyle Errors
   "W", # pycodestyle Warnings
 
@@ -39,6 +39,7 @@ select = [
   # "YTT",  # flake8-2020
 ]
 
-[per-file-ignores]
+[lint.per-file-ignores]
 ".github/workflows/docs/conf.py" = ["E402"]
 "__init__.py" = ["F401"]                    # module imported but unused (6)
+"tests/distributed/test_pytketquest.py" = ["T201"]
