--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
-          if [[ "${{ matrix.os }}" == "ubuntu-22.04" ]]; then
+          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
             sudo apt-get update && sudo apt-get install -y libopenmpi-dev
           elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
             brew install open-mpi
@@ -73,13 +73,13 @@ jobs:
       - name: Install poetry
         run: pip install poetry
       - name: Install docs dependencies
-        if: (matrix.os == 'ubuntu-22.04') && (github.event_name == 'pull_request' || github.event_name == 'schedule' )
+        if: (matrix.os == 'ubuntu-latest') && (github.event_name == 'pull_request' || github.event_name == 'schedule' )
         run: |
           cd docs
           bash ./install.sh
           for w in `find wheelhouse/ -type f -name "*.whl"` ; do poetry run pip install $w ; done
       - name: Build docs
-        if: (matrix.os == 'ubuntu-22.04') && (github.event_name == 'pull_request' || github.event_name == 'schedule' )
+        if: (matrix.os == 'ubuntu-latest') && (github.event_name == 'pull_request' || github.event_name == 'schedule' )
         timeout-minutes: 20
         run: |
           cd docs && poetry run bash ./build-docs.sh
